troca de games por filmes

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
                 </div>
             </article>
-            <article class="games">
+            <article class="films">
                 <div class="titulo">
                     <h1>history</h1>
                 </div>
