--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
         <div class="banner"></div>
         <section>
-            <article class="history">
+            <article class="series">
                 <div class="titulo">
                     <h1>Marvel Heroes</h1>
                 </div>
